cell dataset image
trying to fix cell dataset image issue.

--- a/notebooks/Binary Classification Of Cells Using Logistic Regression.ipynb
+++ b/notebooks/Binary Classification Of Cells Using Logistic Regression.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![CellDatasetAsStackOfTables.jpg](attachment:CellDatasetAsStackOfTables.jpg)"
+    "![Cell Dataset As Stack Of Tables](https://github.com/srohit0/mida/blob/master/data/CellDatasetAsStackOfTables.jpg?raw=true)"
    ]
   },
   {
