--- a/notebooks/10_class_Classification_Of_Cells_Using_FFNN_RELU.ipynb
+++ b/notebooks/10_class_Classification_Of_Cells_Using_FFNN_RELU.ipynb
@@ -24,7 +24,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "[![Linkedin](https://content.linkedin.com/content/dam/brand/site/img/logo/logo-r.png =120x) Join group for discussion on Machine Learning](https://www.linkedin.com/groups/13570295) \n",
+        "[![Linkedin](https://content.linkedin.com/content/dam/brand/site/img/logo/logo-r.png) Join group for discussion on Machine Learning](https://www.linkedin.com/groups/13570295) \n",
         "\n",
         "---\n",
         "\n",
